@@ -3,5 +3,5 @@ from .document import SrcDocument, \
     TableSrcDocument, TreeSrcDocument, SequenceSrcDocument
 
 from .piienum import PiiEnum
-from .piientity import PiiEntity
+from .piientity import PiiEntityInfo, PiiEntity
 from .piicollection import PiiDetector, PiiCollection, PiiCollectionLoader
